# cross-control

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: client.rs  event.rs  event_queue.rs  lib.rs  main.rs  network.rs
src/network/: mod.rs  tcp.rs  udp.rs
src/platform/: mod.rs  x11.rs
src/tests/: event_tests.rs  network_tests.rs
tests/: cli_tests.rs  event_tests.rs  event_unit_tests.rs  network_integration_tests.rs  network_tests.rs  performance_tests.rs  platform_tests.rs  scenario_tests.rs  xkb_test.rs
tests/common/: mod.rs
tests/integration/: mod.rs  network_tests.rs
tests/network/: handshake_tests.rs
tests/platform/: x11_tests.rs
tests/sync/: conflict_tests.rs
tests/unit/: event_tests.rs  mod.rs
