[package]
name = "rust-barrier"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.12"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48", features = ["Win32_UI_Input_KeyboardAndMouse"] }

[dev-dependencies]
tokio-test = "0.4"
assert_matches = "1.5"
